2004-02-10 Hans-Juergen Dorn <hans.dorn AT apl-landau.de>
	   patch committed by Vangelis Rokas <vrokas AT otenet.gr>

	* pcode.c,
	* pcode.h,
	* ralloc.h: added FSR0L, FSR0H and other missing PIC16 SFR's for
	indirect addressing. Marked FSR0 as deprecated
	* gen.c (pointerCode): commented out, not needed now
	(pic16_popGet2p): new MOVFF helper function
	(genGenPointerGet),
	(genGenPointerSet): reimplemented with MOVFF and POSTINC0
	(shiftRLong): removed duplicate debugging info

2004-02-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/ds390/gen.c (genNearPointerGet),
	* src/mcs51/gen.c (genNearPointerGet): allow the genDataPointerGet()
	optimization with bits, but not bitfields.
	* src/ds390/ralloc.c (packRegisters),
	* src/mcs51/ralloc.c (packRegisters): fixed bug #884453 & #880832

2004-02-09 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCcse.c (algebraicOpts): copy operands before modification

2004-02-09 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCsymt.h,
	* src/SDCCicode.c (operandFromSymbol),
	* src/mcs51/ralloc.c (verifyRegsAssigned, serialRegAssign),
	* src/ds390/ralloc.c (verifyRegsAssigned, serialRegAssign),
	* src/z80/ralloc.c (verifyRegsAssigned, serialRegAssign),
	* src/hc08/ralloc.c (verifyRegsAssigned, serialRegAssign),
	* src/pic/ralloc.c (verifyRegsAssigned, serialRegAssign),
	* src/pic16/ralloc.c (verifyRegsAssigned, serialRegAssign): fixed
	bug #892038
	* src/SDCCast.c (createIvalStruct, createIvalArray, gatherAutoInit),
	* src/SDCCglue.c (emitRegularMap, printIvalStruct, printIvalArray,
	printIvalCharPtr, printIvalPtr, printIval, emitStaticSeg, emitOverlay)
	* src/SDCCsymt.c (newSymbol),
	* src/SDCC.y (struct_or_union_specifier, enum_specifier, 
	enumerator_list),
	* src/SDCCval.h,
	* src/SDCCval.c (newiList): fixed bug #885705

2004-02-08  Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* doc/sdccman.lyx: added section 3.1.4: sdcclib.
	* as/mcs51/lkmem.c: report the size of the stack in .mem file.
